# Long-Game

./: README.md
jserver/: .gitignore  pom.xml
jserver/src/main/java/eu/kekx/long_game/: LongGameServerApplication.java
jserver/src/main/resources/: application.properties  template.properties
jserver/src/main/resources/db/migration/: V1.0.0__create_user_table.sql  V1.1.0__create_exercise_tables.sql  V1.1.1__create_exercise_metric_definitions.sql  V1.1.2__create_custom_metric_types.sql  V1.1.3__add_metric_value_types.sql
jserver/src/test/resources/: application.properties
server/: Cargo.toml  docker-compose.yml  template.env
server/migrations/: 20241020165329_initial.sql
server/src/: main.rs  mod.rs
server/src/models/: mod.rs  user.rs
server/src/models/kanban/: board.rs  card.rs  column.rs  custom_field.rs  label.rs  mod.rs
server/src/models/kanban/custom_field/: custom_field.rs  custom_field_type.rs  custom_field_value.rs  custom_field_value_type.rs  mod.rs
server/src/presentation/: mod.rs
server/src/presentation/controllers/: user_controller.rs
server/src/presentation/dto/: user_dto.rs
server/src/repositories/: user_repository.rs
server/src/services/: user_service.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  config.ts
ui/src/components/: Layout.css  Layout.tsx  SideBar.css  SideBar.tsx
ui/src/components/Kanban/: KanbanBoard.css  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  KanbanService.ts  KanbanTypes.ts
ui/src/components/Shopping/: ShoppingList.css  ShoppingList.tsx
(+45 files in other folders)
