[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
